more about forms and started routing

--- a/trainingapp/index-express.html
+++ b/trainingapp/index-express.html
@@ -8,7 +8,13 @@
 <body>
 
 	<app></app>
-	
+
+	<!-- EXT LIBS -->
+<!-- <script src="https://cdn.rawgit.com/google/code-prettify/master/src/prettify.js"></script>
+<script src="https://cdn.rawgit.com/google/code-prettify/master/src/lang-basic.js"></script>
+<script src="/jquery/dist/jquery.js"></script>
+	 -->
+	 
 	<!-- SHIMS -->
 	<script type="text/javascript" src="systemjs/dist/system.js"></script>
 	<script type="text/javascript" src="zone.js/dist/zone.js"></script>
@@ -17,6 +23,7 @@
 	<!-- BUNDLED MODULES -->
 	<script type="text/javascript" src="angular2/bundles/angular2.dev.js"></script>
 	<script type="text/javascript" src="angular2/bundles/router.js"></script>
+
     
 
 	<script type="text/javascript">
