Updated slides plus github ready (to update later)

--- a/trainingapp/index.html
+++ b/trainingapp/index.html
@@ -9,24 +9,22 @@
 
 	<app></app>
 	
-	<!-- SHIMS
+	<!-- SHIMS -->
 	<script type="text/javascript" src="systemjs/dist/system.js"></script>
 	<script type="text/javascript" src="zone.js/dist/zone.js"></script>
-	<script type="text/javascript" src="reflect-metadata/Reflect"></script> -->
+	<script type="text/javascript" src="reflect-metadata/Reflect"></script>
 
-	<!-- BUNDLED MODULES 
-	<!script type="text/javascript" src="angular2/bundles/angular2.dev.js"></script>
-	<!script type="text/javascript" src="angular2/bundles/router.js"></script> -->
+	<!-- BUNDLED MODULES -->
+	<script type="text/javascript" src="angular2/bundles/angular2.dev.js"></script>
+	<script type="text/javascript" src="angular2/bundles/router.js"></script>
 
 	<script type="text/javascript">
 		// System.config({
 		// 	defaultJSExtensions: true
 		// });
 
-		// System.import('/trainingapp/components/app/app');
+		System.import('/trainingapp/components/app/app');
 	</script>
-
-	<script type="text/javascript" src="./dist/bundle.js"></script>
 
 </body>
 </html>
