RC1 ended, dist now work locally, to check on github

--- a/trainingapp/index.html
+++ b/trainingapp/index.html
@@ -3,12 +3,18 @@
 	<head>
 		<title>ng2 training</title>
 		<link rel="stylesheet" type="text/css" href="styles/main.css" >
-		<link rel="stylesheet" href="https://cdn.rawgit.com/google/code-prettify/master/styles/desert.css">
+		<link rel="stylesheet" type="text/css" href="src/components/editor/prettify.css">
+		<!-- <link rel="stylesheet" href="https://cdn.rawgit.com/google/code-prettify/master/src/prettify.css"> -->
 
 		<script src="zone.js/dist/zone.js"></script>
 		<script src="reflect-metadata/Reflect.js"></script>
-		<!-- build:jspmBundle -->
 		<script src="jspm_packages/system.js"></script>
+		
+		<!-- Add the bundle here -->
+		<!-- build:jspmBundle --><!-- endbuild -->
+
+		<!-- Update config here -->
+		<!-- build:jspmConfig -->
 		<script src="config.js"></script>
 		<!-- endbuild -->
 
